--- a/src/pages/edit-recipe/edit-recipe.html
+++ b/src/pages/edit-recipe/edit-recipe.html
@@ -1,18 +1,48 @@
-<!--
-  Generated template for the EditRecipePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-recipe</ion-title>
+    <ion-title *ngIf="mode=='New'">New Recipe</ion-title>
+    <ion-title *ngIf="!(mode=='New')"></ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+    <form [formGroup]="recipeForm" (ngSubmit)="formSubmit()">
+        <ion-list>
+            <ion-item>
+              <ion-label floating>Title</ion-label>
+              <ion-input type="text" formControlName="title"></ion-input>            
+            </ion-item>  
+            <ion-label
+              text-center
+              color="danger"
+              *ngIf="!recipeForm.controls['title'].pristine && recipeForm.controls['title'].invalid"
+            >
+              Title is not valid...
+            </ion-label>
+            <ion-item>
+              <ion-label floating>Description</ion-label>
+              <ion-textarea formControlName="description"></ion-textarea>
+            </ion-item>  
+            <ion-label
+              text-center
+              color="danger"
+              *ngIf="!recipeForm.controls['description'].pristine && recipeForm.controls['description'].invalid"
+            >
+              Description is not valid
+            </ion-label>
+            <ion-item>
+                <ion-label floating>Difficulty</ion-label>
+                <ion-select formControlName="difficulty">
+                 <div *ngFor="let option of selectedOptions; let i=index">
+                    <ion-option [value]="option" [selected]="i==0">{{option}}</ion-option>
+                 </div>
+                </ion-select>
+            </ion-item>
 
+           <button ion-button block color="primary" type="submit" [disabled]="!recipeForm.valid">Add</button>         
+        </ion-list>
+      </form>
 </ion-content>
