--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -1,17 +1,16 @@
-<!--
-  Generated template for the RecipesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>recipes</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="onNewrecipe()">
+        <ion-icon name="md-add">          
+        </ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Recipes</ion-title>
   </ion-navbar>
 
 </ion-header>
-
 
 <ion-content padding>
 
