--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -9,35 +9,43 @@
 
 <ion-content padding>
   <form [formGroup]="shoppingItemForm" (ngSubmit)="formSubmit()">
-    <ion-item>
-      <ion-label floating>Name</ion-label>
-      <ion-input type="text" formControlName="ingridientName"></ion-input>            
-    </ion-item>  
-    <ion-label
-      text-center
-      color="danger"
-      *ngIf="!shoppingItemForm.controls['ingridientName'].pristine && shoppingItemForm.controls['ingridientName'].invalid"
-    >
-      Name is not valid...
-    </ion-label>
-    <ion-item>
-      <ion-label floating>Amount</ion-label>
-      <ion-input type="number" formControlName="ingridientAmount"></ion-input>
-    </ion-item>  
-    <ion-label
-      text-center
-      color="danger"
-      *ngIf="!shoppingItemForm.controls['ingridientAmount'].pristine && shoppingItemForm.controls['ingridientAmount'].invalid"
-    >
-      Amount is not valid
-    </ion-label>
-  
-    <button ion-button block color="primary" type="submit" [disabled]="!shoppingItemForm.valid">Add</button>   
+    <ion-list>
+        <ion-item>
+            <ion-label floating>Name</ion-label>
+            <ion-input type="text" formControlName="ingridientName"></ion-input>            
+        </ion-item>  
+        <ion-label
+          text-center
+          color="danger"
+          *ngIf="!shoppingItemForm.controls['ingridientName'].pristine && shoppingItemForm.controls['ingridientName'].invalid"
+        >
+          Name is not valid...
+        </ion-label>
+        <ion-item>
+          <ion-label floating>Amount</ion-label>
+          <ion-input type="number" formControlName="ingridientAmount"></ion-input>
+        </ion-item>  
+        <ion-label
+          text-center
+          color="danger"
+          *ngIf="!shoppingItemForm.controls['ingridientAmount'].pristine && shoppingItemForm.controls['ingridientAmount'].invalid"
+        >
+          Amount is not valid
+        </ion-label>        
+        <button ion-button block color="primary" type="submit" [disabled]="!shoppingItemForm.valid">Add</button>         
+    </ion-list>
   </form>
 
   <ion-list>
-    <ion-item *ngFor="let ingridient of shoppingListService.getIngridientsToBuy()">
-      {{ingridient.name}} ({{ingridient.amount}})
-    </ion-item>
+    <ion-item-sliding *ngFor="let ingridient of shoppingListService.getIngridientsToBuy()">
+      <ion-item>
+          {{ingridient.name}} ({{ingridient.amount}})
+      </ion-item>
+      <ion-item-options>
+        <button ion-button color="danger">
+          <ion-icon name="trash" (click)="onTrashIngridientClicked(ingridient)"></ion-icon>
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>    
   </ion-list>
 </ion-content>
