--- a/src/pages/edit-recipe/edit-recipe.html
+++ b/src/pages/edit-recipe/edit-recipe.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <ion-title *ngIf="mode=='New'">New Recipe</ion-title>
-    <ion-title *ngIf="!(mode=='New')"></ion-title>
+    <ion-title *ngIf="!(mode=='New')">Edit Recipe</ion-title>
   </ion-navbar>
 
 </ion-header>
